clang/test/BSC/Negative/Coroutine/Other/invalid-await-expression/invalid-await-expression.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s 

#include "../../async-func-read-opposite.hbs"

trait Future<int>* f() { // expected-error {{await expression is not allowed to appear in non-async function.}}
    trait Future<int>*f;
    int a = await read(1);
    return f;
}

int main() {
  return 0;
}